--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "virtual-ambulance-server",
   "version": "1.0.0",
   "description": "Virtual Ambulance Server",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
