--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^6.0.11"
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.11",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
