--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/KLIM-nk01/virtual-ambulance-server#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.11",
     "multer": "^1.4.3"
