--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.11",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
