--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.11",
     "multer": "^1.4.3",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
