--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.11",
     "multer": "^1.4.3",
+    "socket.io": "^4.5.1",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
   },
